--- a/project/app_client/templates/account.html
+++ b/project/app_client/templates/account.html
@@ -3,7 +3,7 @@
     <div class="col-xs-3 col-xs-offset-1">
       <ul class="nav nav-pills nav-stacked">
         <li class="nav-item">
-          <a class="nav-link active" ng-class="{active: selected === 0}" href ng-click="selected = 0">Profile</a>
+          <a class="nav-link" ng-class="{active: selected === 0}" href ng-click="selected = 0">Profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href ng-class="{active: selected === 1}" ng-click="selected = 1">Change Password</a>
@@ -24,7 +24,7 @@
           <label class="btn btn-primary" for="fileInput">
             <input style="display:none;" type="file" ngf-select ng-model="picFile" name="file" id="fileInput"
             accept="image/*" ngf-max-size="2MB" required ng-change="uploadAvatar(picFile)">
-            Browse Image
+            Change Avatar
           </label>
         </fieldset>
         <div ng-show="imageChanged" class="alert alert-success" role="alert">
@@ -33,19 +33,6 @@
       </form>
 
       <form name="postForm" ng-show="selected === 0" ng-submit='changeProfile()'>
-        <fieldset class="form-group">
-          <label for="username">Username</label>
-          <input type="text" class="form-control" id="username" name="username" ng-model="user.username" username required>
-        </fieldset>
-        <div ng-show="postForm.username.$touched">
-          <div ng-show="postForm.username.$error.required" class="alert alert-danger" role="alert">
-            This cannot be left blank
-          </div>
-          <div ng-show="postForm.username.$error.username" class="alert alert-danger" role="alert">
-            This username is already taken.
-          </div>
-        </div>
-
         <fieldset class="form-group">
           <label for="fullname">Full Name</label>
           <input type="text" name="fullname" class="form-control" id="fullname" ng-model="user.fullname" required>
@@ -58,11 +45,17 @@
 
         <fieldset class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" name="email" ng-model="user.email" required>
+          <input type="email" class="form-control" id="email" name="email" ng-model="user.email" required emailcheck>
         </fieldset>
-        <div ng-show="postForm.fullname.$touched">
+        <div ng-show="postForm.email.$touched">
           <div ng-show="postForm.email.$error.required" class="alert alert-danger" role="alert">
             This cannot be left blank
+          </div>
+          <div ng-show="postForm.email.$error.email" class="alert alert-danger" role="alert">
+            Invalid email
+          </div>
+          <div ng-show="postForm.email.$error.emailcheck" class="alert alert-danger" role="alert">
+            This email is already taken.
           </div>
         </div>
 
@@ -70,6 +63,10 @@
           <label for="bio">Bio</label>
           <textarea class="form-control" id="bio" ng-model="user.bio"></textarea>
         </fieldset>
+
+        <div ng-show="profStatus === 1" class="alert alert-success" role="alert">
+          Your profile is updated
+        </div>
         <button type="submit" ng-disabled="postForm.$invalid" class="btn btn-secondary">Submit</button>
       </form>
 
@@ -78,20 +75,26 @@
         <h4 class="p-b-1">Change Password</h3>
         <fieldset class="form-group">
           <label for="old-pass">Old Password</label>
-          <input name="old" type="password" class="form-control" id="old-pass" ng-model="oldPass" required>
+          <input name="old" type="password" class="form-control" id="old-pass" ng-model="oldPass" ng-minlength="6" required>
         </fieldset>
         <div ng-show="passForm.old.$touched">
           <div ng-show="passForm.old.$error.required" class="alert alert-danger" role="alert">
             This cannot be left blank
           </div>
+          <div ng-show="passForm.old.$error.minlength" class="alert alert-danger" role="alert">
+            Minimum 6 characters
+          </div>
         </div>
         <fieldset class="form-group">
           <label for="new-pass">New Password</label>
-          <input name="new" type="password" class="form-control" id="new-pass" ng-model="newPass" required>
+          <input name="new" type="password" class="form-control" id="new-pass" ng-model="newPass" ng-minlength="6" required>
         </fieldset>
         <div ng-show="passForm.new.$touched">
           <div ng-show="passForm.new.$error.required" class="alert alert-danger" role="alert">
             This cannot be left blank
+          </div>
+          <div ng-show="passForm.new.$error.minlength" class="alert alert-danger" role="alert">
+            Minimum 6 characters
           </div>
         </div>
         <fieldset class="form-group">
