--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -1,4 +1,72 @@
 /***********************************
+ MDL Badge
+***********************************/
+
+.mdl-badge {
+  position: relative;
+  white-space: nowrap;
+  margin-right: 24px; }
+  .mdl-badge:not([data-badge]) {
+    margin-right: auto; }
+  .mdl-badge[data-badge]:after {
+    content: attr(data-badge);
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-align-content: center;
+        -ms-flex-line-pack: center;
+            align-content: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    top: -11px;
+    right: -24px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    background: rgb(255,64,129);
+    color: rgb(255,255,255); }
+    .mdl-button .mdl-badge[data-badge]:after {
+      top: -10px;
+      right: -5px; }
+  .mdl-badge.mdl-badge--no-background[data-badge]:after {
+    color: rgb(255,64,129);
+    background: rgba(255,255,255,0.2);
+    box-shadow: 0 0 1px gray; }
+  .mdl-badge.mdl-badge--overlap {
+    margin-right: 10px; }
+    .mdl-badge.mdl-badge--overlap:after {
+      right: -10px; }
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  word-wrap: normal;
+  -moz-font-feature-settings: 'liga';
+       font-feature-settings: 'liga';
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased; }
+
+/***********************************
  Navbar
 ***********************************/
 
@@ -8,6 +76,34 @@
 
 .navbar-brand {
   padding-right: 30%;
+}
+
+.notif-bell {
+  color: white;
+}
+
+.notif-bell:hover {
+  color: blue;
+}
+
+.notif-menu {
+  width: 350px;
+  font-size: 14px;
+}
+
+.mdl-badge[data-badge]:after {
+  right: 5px;
+  top: -3px;
+}
+
+/***********************************
+ Notif
+***********************************/
+.notif-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  margin-right: 10px;
 }
 
 /***********************************
@@ -53,11 +149,20 @@
 }
 
 /***********************************
- Error page
+ Search page
 ***********************************/
 
 #error {
   padding-top: 10rem;
+}
+
+/***********************************
+ Search page
+***********************************/
+
+.search-nav {
+  display: flex;
+  justify-content: space-around;
 }
 
 /***********************************
