--- a/project/app_client/partials/nav.html
+++ b/project/app_client/partials/nav.html
@@ -12,17 +12,24 @@
               <span>No notifications</span>
             </div>
             <div ng-repeat="notif in user.notif">
-              <a class="dropdown-item" ng-href="{{notif.url}}" style="color: black; text-decoration: none">
-                <div>
-                  <img class="notif-img" ng-src="{{notif.img}}">
-                  <span ng-bind-html="notif.msg"></span>
-                </div>
-              </a>
+              <div>
+                <a class="dropdown-item" ng-href="{{notif.url}}" style="color: black; text-decoration: none">
+                  <div class="notif-container">
+                    <div class="notif-img">
+                      <img ng-src="{{notif.img}}">
+                    </div>
+                    <div class="notif-msg">
+                      <span ng-bind-html="notif.msg"></span><br>
+                      <span style="font-size: 11px">{{notif.time}}</span>
+                    </div>
+                  </div>
+                </a>
+              </div>
               <div class="dropdown-divider"></div>
             </div>
-            <!-- <div ng-hide="noNotif" class="text-xs-center dropdown-item" style="margin-bottom: 10px">
-              <a style="color: black; text-decoration: none;" href="notifications">See All Notifications</a>
-            </div> -->
+            <div ng-hide="noNotif" class="text-xs-center dropdown-item" style="margin-bottom: 5px">
+              <a style="color: black; text-decoration: none;" href>See All Notifications</a>
+            </div>
           </div>
         </div>
       </li>
@@ -43,10 +50,10 @@
     </ul>
 
     <a href="/" class="navbar-brand">PICSHARE</a>
-    <form ng-submit="redirect(username)" class="form-inline">
+    <form name="searchform" ng-submit="redirect(username)" class="form-inline">
       <input autocomplete="off" type="text" ng-model="username" name="username" aria-describedby="basic-addon1"
-      placeholder="Search" class="form-control"/>
-      <button type="submit" class="btn btn-primary">Go</button>
+      placeholder="Search" class="form-control" required/>
+      <button ng-disabled="searchform.$invalid" type="submit" class="btn btn-primary">Go</button>
     </form>
   </div>
 </nav>
